# QWENGenerator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: .github.ci.yml
app/: main.py
app/api/: handlers.py  schema.py
app/generators/: download.py  hentai.py  porn.py  qwen.py  sd.py
