[tool.poetry]
name = "ai-generators"
version = "0.0.0"
description = ""
authors = ["leonidsliusar <loslyusar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
diffusers = {git = "https://github.com/huggingface/diffusers"}
transformers = "^4.57.1"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
